# mdcmd

./: .env.example  .env.signing.example  .gitignore  README.md  build-release.sh  index.html  package-lock.json  package.json
.github/workflows/: deploy-web.yml  release-cli.yml  release.yml
cli/: Cargo.toml  README.md  build.rs
cli/src/: config.rs  main.rs  markdown.rs  palette.rs  tui.rs
public/: manifest.webmanifest  sw.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  ios.json
src-tauri/icons/: icon.icns
src-tauri/plugins/docpicker/: .gitignore  Cargo.toml  build.rs
src-tauri/plugins/docpicker/ios/: Package.swift
src-tauri/plugins/docpicker/ios/Sources/: DocpickerPlugin.swift
src-tauri/plugins/docpicker/permissions/: default.toml
src-tauri/plugins/docpicker/permissions/autogenerated/: reference.md
src-tauri/plugins/docpicker/permissions/autogenerated/commands/: release_folder.toml
src-tauri/plugins/docpicker/permissions/schemas/: schema.json
src-tauri/plugins/docpicker/src/: error.rs  ios.rs  lib.rs  models.rs  stub.rs
src-tauri/scripts/: patch-ios-plist.mjs
src-tauri/src/: lib.rs  main.rs
src/components/: DropboxConnect.tsx  ErrorBoundary.tsx  FileBrowser.tsx  MarkdownEditor.tsx  MediaViewer.tsx
src/storage/: index.ts  mobileBackend.ts  tauriBackend.ts  types.ts
src/storage/dropbox/: auth.ts  backend.ts
src/utils/: paths.ts
