[package]
name = "mdc"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["markdown"]
homepage = "https://mdcmd.com"
repository = "https://github.com/apstrand/mdcmd"
readme = "../README.md"
description = "Markdown editor and file browser"

[[bin]]
name = "mdc"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
