[package]
name = "tauri-plugin-docpicker"
version = "0.1.0"
description = "Native document-folder picker (iOS UIDocumentPicker + security-scoped bookmarks) for mdcmd"
authors = ["Peter Strand"]
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-docpicker"

[dependencies]
tauri = { version = "2.11.2" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.6.2", features = ["build"] }
